tests/ecc-aws-070-unused_ec2_security_groups/placebo-green/codebuild.ListProjects_1.json
{
    "status_code": 200,
    "data": {
        "projects": [],
        "ResponseMetadata": {}
    }
}
