tests/ecc-aws-070-unused_ec2_security_groups/placebo-green/events.ListTargetsByRule_1.json
{
    "status_code": 200,
    "data": {
        "Targets": [
            {
                "Id": "test",
                "Arn": "arn:aws:events:eu-west-1:644160558196:event-bus/test",
                "RoleArn": "arn:aws:iam::644160558196:role/test"
            }
        ],
        "ResponseMetadata": {}
    }
}
